--- a/algebraic-ODE-solution/ODE-algebraic.tex
+++ b/algebraic-ODE-solution/ODE-algebraic.tex
@@ -144,7 +144,7 @@
 	\begin{itemize}
 		\item \(\lambda_1 \neq \lambda_2\). \(f\) can have a part of \(\lambda_1\)'s eigenspace and of \(\lambda_2\)'s eigenspace, and the corresponding eigenfunctions form a basis for our solution: \(f(t) = c_1 e^{\lambda_1t} + c_2 e^{\lambda_2t}\).
 	
-		\item \(\lambda_1 = \lambda_2\). This is the hairy case. If \(D\) is diagonalizable, then you get something roughly similar to the above case, with \(f' = \lambda f\) and \(f'' = \lambda f'\), and then \(f(t) = Ce^{\lambda t}\). Otherwise \(D\) has a shear component and doesn't seem have enough eigenspaces, so a lot more complicated work is necessary to get the time-varying \(tCe^{\lambda t}\) term.
+		\item \(\lambda_1 = \lambda_2\). This is the hairy case. If \(D\) is diagonalizable, then you get something roughly similar to the above case, with \(f' = \lambda f\) and \(f'' = \lambda f'\), and then \(f(t) = Ce^{\lambda t}\). Otherwise \(D\) has a shear component and doesn't seem to have enough eigenspaces, so a lot more complicated work is necessary to get the time-varying \(tCe^{\lambda t}\) term.
 	\end{itemize}
 	
 	\section{Extensions}
