--- a/algebraic-ODE-solution/ODE-algebraic.tex
+++ b/algebraic-ODE-solution/ODE-algebraic.tex
@@ -58,7 +58,7 @@
 	\end{align*}
 	
 	\begin{lemma}
-		\(\mathcal{F}(\mathbb{R}, \mathbb{R})\) can be considered vector space of \(\mathbb{R}\) with the operations stated above.
+		\(\mathcal{F}(\mathbb{R}, \mathbb{R})\) can be considered a vector space of \(\mathbb{R}\) with the operations stated above.
 	\end{lemma}
 	\begin{proof}
 		Exercise.
